--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 
     header {
       position: relative;
-      background: url("{% static 'img/biblio.jpg' %}") no-repeat center center/cover;
+      background: url("{% static 'img/bibliFutur1.jpg' %}") no-repeat center center/cover;
       color: #fff;
       padding: 3rem 0;
       text-align: center;
@@ -34,7 +34,7 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.5); /* filtre noir semi-transparent */
+      background-color: rgba(0, 0, 0, 0.653); /* filtre gris semi-transparent */
       z-index: 0;
     }
 
@@ -60,7 +60,7 @@
   <header>
     <div class="container">
       <h1>Bibliothèque Boualem</h1>
-      <p>Bienvenue dans notre bibliothèque virtuelle</p>
+      <p>Canada</p>
     </div>
   </header>
 
