--- a/templates/base.html
+++ b/templates/base.html
@@ -10,48 +10,11 @@
   <title>{% block title %}Bibliothèque Boualem{% endblock %}</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
   <link href="{% static 'css/styles.css' %}" rel="stylesheet">
-
-  <style>
-    body {
-      font-family: 'Roboto Slab', serif;
-      background-color: #f8f9fa;
-      margin: 0;
-    }
-
-    header {
-      position: relative;
-      background: url("{% static 'img/bibliFutur1.jpg' %}") no-repeat center center/cover;
-      color: #fff;
-      padding: 3rem 0;
-      text-align: center;
-    }
-
-    header::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.653); /* filtre gris semi-transparent */
-      z-index: 0;
-    }
-
-    header .container {
-      position: relative;
-      z-index: 1; /* pour que le texte reste au-dessus du filtre */
-    }
-
-    header h1 {
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-    }
-  </style>
+  <link href="{% static 'css/base.css' %}" rel="stylesheet">
+  {% block extra_css %}{% endblock %}
 </head>
 
 <body>
