--- a/member_app/templates/member_app/login.html
+++ b/member_app/templates/member_app/login.html
@@ -6,11 +6,11 @@
 <div class="container-fluid member-app text-white">
     <div class="row">
         <div class="col-md-8 col-lg-6 mx-auto">
-            <h2 class="text-white">Veuillez vous identifier</h2>
+            <h2 class="text-black">Veuillez vous identifier</h2>
             <br />
 
             <form method="POST">
-                <div class="form-group text-white">
+                <div class="form-group text-black">
                     {% csrf_token %}
                     {{ form.as_p }}
 
