--- a/member_app/templates/member_app/password_edit.html
+++ b/member_app/templates/member_app/password_edit.html
@@ -3,14 +3,14 @@
 
 {% block content %}
 
-<div class="container-fluid member-app text-white">
+<div class="container-fluid member-app text-black">
     <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto">
-            <h2 class="text-white">Modifier votre mot de passe</h2>
+            <h2 class="text-black">Modifier votre mot de passe</h2>
             <br />
 
             <form method="POST">
-                <div class="form-group text-white">
+                <div class="form-group text-black">
                     {% csrf_token %}
                     {{ form.as_p }}
 
