--- a/member_app/templates/member_app/user_edit.html
+++ b/member_app/templates/member_app/user_edit.html
@@ -3,18 +3,18 @@
 
 {% block content %}
 
-<div class="container-fluid member-app text-white">
+<div class="container-fluid member-app text-black">
     <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto">
-            <h2 class="text-white">Vos informations de compte</h2>
+            <h2 class="text-black">Vos informations de compte</h2>
             <br />
 
             <form method="POST">
-                <div class="form-group text-white">
+                <div class="form-group text-black">
                     {% csrf_token %}
                     {{ form.as_p }}
 
-                    <p><a href="{% url 'password_edit' %}" class="text-white">Modifier votre mot de passe</a></p>
+                    <p><a href="{% url 'password_edit' %}" class="text-black">Modifier votre mot de passe</a></p>
 
                     <a href="{% url 'index' %}" class="btn btn-secondary">Annuler</a>
                     <button type="submit" class="btn btn-primary">Confirmer <i
